--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bendo01/IAcl",
+    "name": "bendo01/iacl",
     "description" : "iAcl formaly name Evana Fitria ACL, credits to mark story, nicolas rod, cakephp, jquery, datatables js, twitter bootstrap, and font awesome",
     "license" : "Creative Commons Attribution 3.0 United States",
     "type" : "cakephp-plugin",
